--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reports-app",
-  "version": "1.0.0-beta.1",
-  "private": true,
-  "homepage": "."
+  "description": null,
+  "license": null,
+  "version": "1.0.0-beta.1"
 }
