--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "@dhis2/d2-ui-forms": "^5.3.0",
         "@dhis2/d2-ui-org-unit-tree": "^7.0.5",
         "@dhis2/d2-ui-sharing-dialog": "^7.0.5",
-        "@dhis2/d2-ui-table": "^5.3.0",
+        "@dhis2/d2-ui-table": "^7.0.5",
         "@dhis2/ui-core": "^4.1.1",
         "@dhis2/ui-widgets": "^2.0.5",
         "chart.js": "^2.7.3",
@@ -58,12 +58,12 @@
         "react-chartjs-2": "^2.7.4",
         "react-final-form": "^4.0.2",
         "react-redux": "^6.0.0",
-        "react-router-dom": "^v4.4.0-beta.8",
+        "react-router-dom": "^v5.2.0",
         "redux": "^4.0.1",
         "redux-thunk": "^2.3.0",
         "reselect": "^4.0.0",
         "whatwg-fetch": "3.4.0",
-        "xlsx": "^0.13.0"
+        "xlsx": "^0.16.6"
     },
     "jest": {
         "setupFilesAfterEnv": [
