1603f07 chore: update d2 config

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
         "format": "yarn format:js && yarn format:text",
         "cypress:server": "yarn build && STORYBOOK_TESTING=1 yarn start",
         "cypress:open": "yarn d2-utils-cypress open",
-        "cypress:run": "yarn d2-utils-cypress run",
-        "postinstall": "patch-package"
+        "cypress:run": "yarn d2-utils-cypress run"
     },
     "devDependencies": {
         "@cfaester/enzyme-adapter-react-18": "^0.8.0",
@@ -29,8 +28,6 @@
         "cheerio": "0.22.0",
         "enzyme": "^3.11.0",
         "enzyme-to-json": "^3.5.0",
-        "patch-package": "^8.0.0",
-        "postinstall-postinstall": "^2.1.0",
         "redux-devtools-extension": "^2.13.8",
         "redux-mock-store": "^1.5.4"
     },
