--- a/d2.config.json
+++ b/d2.config.json
@@ -5,6 +5,11 @@
   "id": "b7e619e4-5b9f-4b8b-a4ff-9874f197ae39",
   "minDHIS2Version": "2.33",
   "name": "reports",
+  "viteConfigExtensions": {
+    "define": {
+      "global": "window"
+    }
+  },
   "version": "100.1.1",
   "description": "",
   "entryPoints": {
